<resources>
    <string name="app_name">GymTracker</string>
    <string name="action_profile">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_logout">Logout</string>
    <string name="profile_details">Profile Details</string>
    <string name="back">Back</string>
    <string name="first_name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="button_edit">Edit</string>
</resources>